[package]
name = "mik32v2-pac"
version = "0.0.1"
edition = "2024"
authors = ["Denis Bykov"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access crate for the MIK32 Amur microcontrollers"
keywords = ["riscv", "mik32", "pac"]
repository = "https://github.com/mik32-rs/mik32v2-pac"
license = "GPL-3.0-only"

[dependencies]
riscv = "0.12"
vcell = "0.1.3"

[dependencies.critical-section]
version = "1.2.0"
optional = true

[dependencies.riscv-rt]
version = "0.13"
optional = true

[features]
default = ["critical-section"]
critical-section = ["dep:critical-section"]
rt = ["riscv-rt"]
rts = ["rt", "riscv-rt/s-mode"]
all = ["critical-section", "rts"]
